Fix scrollbar colors in 2D editor

--- a/css/panels.css
+++ b/css/panels.css
@@ -2258,6 +2258,7 @@ span.controller_state_section_info {
 		margin: auto;
 		position: relative;
 		overflow: hidden;
+		scrollbar-color: var(--color-selected) var(--color-dark);
 	}
 	#uv_frame {
 		height: 320px;
